@@ -1,3 +1,8 @@
+Fri Nov 24 22:24:04 2000  George Lebl <jirka@5z.com>
+
+	* basep-widget.c, foobar-widget.c: fixup basep to use default
+	  handlers instead of signal connection.  Add autoraise to foobar.
+
 Tue Nov 21 21:28:00 2000  George Lebl <jirka@5z.com>
 
 	* gnome-run.c: add support for launching "man:" "info:", "file:"
